# university

./: README.md
1st year/LI 2/: README.md
1st year/LI 2/Projeto/: README.md
1st year/LI 2/Reversi/: bot.c  bot.h  estado.c  listas.h  main.c
1st year/LI 2/Reversi_build/: CMakeCache.txt  cmake_install.cmake  li2reversi
2nd year/CP/: README.md
2nd year/CP/Projeto/: LTree.hs  README.md  cp1819t.blg  cp1819t.idx  cp1819t.ilg  cp1819t.tex
2nd year/LI 3/Projeto C/: README.md
2nd year/LI 3/Projeto Java/: README.md
2nd year/POO/: README.md
2nd year/POO/Projeto/: README.md
2nd year/POO/UMCarroJá!/: Aluguer.ctxt  Aplicacao.java  CarroGasoleo.ctxt  CarroGasoleo.java  CarroGasolina.ctxt  Cliente.ctxt  ComparadorDistancia.ctxt  ComparadorDistancia.java  Dados.ctxt  EmailInexistenteException.ctxt  EmailInexistenteException.java  EmailInvalidoException.ctxt  MatriculaInexistenteException.ctxt  Menu.ctxt  NomeInvalidoException.ctxt  NomeInvalidoException.java  PasswordInvalidaException.ctxt  Proprietario.ctxt  Veiculo.java  VeiculoInexistenteException.ctxt  VeiculoInexistenteException.java  backup.txt
2nd year/SO/: README.md
2nd year/SO/Gestor de Vendas/: Agregador.c  ClienteDeVendas.c  ServidorDeVendas.c
2nd year/SO/Projeto/: README.md  Report.ltx
2nd-year/CP/Projeto/: README.md  cp1819t.ind  cp1819t.lhs
2nd-year/LI3/Projeto Java/: README.md
3rd year/CG/Projeto/Fase 3/Engine/: CMakeLists.txt  Shape.cpp  Shape.h  engine.cpp  engine.h  parser.h
3rd year/DSS/: ModeloLogico.mwb  README.md  Use_Cases.odt
3rd year/LI4/: README.md
3rd year/MEIO/: README.md
(+778 files in other folders)
